fixed nav spacing

--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,7 @@ header nav {
 header nav ul {
   display: flex;
   justify-content: space-around;
-  flex-basis: 30%;
+  flex-basis: 45%;
   text-decoration: none;
 }
 
@@ -684,6 +684,9 @@ footer span {
 
     header nav {
       font-size: 1em;
+    }
+    header nav ul {
+      flex-basis: 30%;
     }
 
     .homepage-header {
